--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   intl: ^0.18.0
   firebase_core: ^2.12.1 
   flutter_bloc: ^8.1.2    
+  shared_preferences: ^2.2.3
+  flutter_secure_storage: ^9.2.2
 dev_dependencies: 
   flutter_test: 
     sdk: flutter
