--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   pin_code_fields: ^8.0.1
   flutter_rating_bar: ^4.0.1
   http: ^1.2.1
+  lottie: ^2.2.0
   smooth_page_indicator: ^1.1.0
   readmore: ^2.2.0
   easy_date_timeline: ^1.0.2
